# NYC-Taxi-MLOPS-Project

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  pyproject.toml  setup.py  template.py
data/processed/: .gitignore
models/models/: xgbreg.joblib
models/transformers/: outliers.joblib  output_transformer.joblib  preprocessor.joblib
notebooks/: nyc_taxi_eda.ipynb
src/: logger.py
src/data/: extract_dataset.py  make_dataset.py
src/features/: build_features.py  data_preprocessing.py  distances.py  modify_features.py  outliers_removal.py
src/models/: predict_model.py  train_model.py
src/visualizations/: plot_results.py
