[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "nyc_taxi_mlops_project"
version = "0.0.1"
description = "Doing Prediction of time taken for a cab to complete ride with mlops integration'"
authors = [
  { name = "Suryakant Chaubey" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["nyc_taxi_mlops_project"]
force_sort_within_sections = true
